--- a/docs/zh/guide/basic/widget-core-concepts.mdx
+++ b/docs/zh/guide/basic/widget-core-concepts.mdx
@@ -1,1 +1,1297 @@
 # Widget 核心概念
+
+Widget 是 Makepad 框架提供的基础控件。
+
+**Widget 与 Compont 的主要区别**：
+
+Widget:
+
+- 基础 UI 构建块
+- 直接处理事件和绘制
+- 关注基础 UI 能力
+
+Component:
+
+- Widget 的组合
+- 更高层的抽象
+- 关注业务逻辑
+- 组合已有 Widget
+- 重用性更强
+
+## Widget 核心概念概要
+
+### 与 Widget 的相关的 `trait`
+
+#### `WidgetNode`
+
+```rust
+pub trait WidgetNode: LiveApply {
+    // 一些主要的方法
+    fn uid_to_widget(&self, uid: WidgetUid) -> WidgetRef;
+    fn find_widgets(&self, path: &[LiveId], cached: WidgetCache, results: &mut WidgetSet);
+    fn walk(&mut self, cx: &mut Cx) -> Walk;
+    fn area(&self) -> Area;
+    fn redraw(&mut self, cx: &mut Cx);
+    // 其他默认实现
+}
+```
+这是所有 Widget 的基础 trait :
+
+- 基于 UID 查找 Widget
+- 基于路径查找 Widgets
+- 计算布局位置大小
+- 管理绘制区域
+- 触发重绘
+
+#### `Widget`
+
+```rust
+pub type DrawStep = Result<(), WidgetRef>;
+
+pub trait Widget: WidgetNode {
+    fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope);
+    fn draw_walk(&mut self, cx: &mut Cx2d, scope: &mut Scope, walk: Walk) -> DrawStep;
+
+    // 其他默认实现
+}
+```
+
+该 `trait` 扩展了 `WidgetNode`，增加了:
+
+- 事件处理系统
+- 绘制流程控制
+
+### Widget 引用与管理
+
+#### `WidgetRef`
+
+```rust
+pub struct WidgetRefInner {
+    pub widget: Box<dyn Widget>,
+}
+
+pub struct WidgetRef(Rc<RefCell<Option<WidgetRefInner>>>);
+
+// 关键方法
+impl WidgetRef {
+	// 其他方法
+    // 事件处理
+    pub fn handle_event(&self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
+        // ...
+
+    }
+
+    // 绘制
+    pub fn draw(&mut self, cx: &mut Cx2d, scope: &mut Scope) -> DrawStep {
+        // ...
+    }
+
+    // 获取底层Widget的可变引用
+    pub fn borrow_mut<T: 'static + Widget>(&self) -> Option<RefMut<'_, T>> {
+        // ...
+    }
+
+	// 基础查找方法
+    pub fn find_widgets(&self, path: &[LiveId], cached: WidgetCache, results: &mut WidgetSet) {
+        if let Some(inner) = self.0.borrow().as_ref() {
+            inner.widget.find_widgets(path, cached, results)
+        }
+    }
+}
+```
+- 使用 `Rc<RefCell>` 提供引用计数和内部可变性
+- 支持 `Clone` 和线程安全
+- 通过 `borrow/borrow_mut` 可以安全访问 Widget
+
+#### `WidgetCache`
+
+WidgetCache 是 Makepad UI 框架中重要的性能优化机制，WidgetCache 贯穿整个组件树遍历过程的参数，用于控制各层组件是否启用、清除或绕过缓存。
+
+这对于提升大型 UI 的性能很重要，因为它可以:
+
+- 避免重复的组件树遍历
+- 在需要时强制获取最新状态
+- 在组件状态变化时清除失效的缓存
+
+```rust
+// 典型调用链:
+widget.widget(&path)
+  -> widget.find_widgets(path, WidgetCache::Yes)  // 高层API默认使用缓存
+    -> child_widget.find_widgets(path, cached)    // 继续向下传递缓存参数
+      -> grandchild.find_widgets(path, cached)    // 缓存策略需要一致
+
+```
+
+#### `WidgetSet`
+
+WidgetSet 是 WidgetRef 的集合。
+
+```rust
+pub struct WidgetSet(pub SmallVec<[WidgetRef;2]>);
+```
+
+- 高效管理多个 Widget 引用
+- 支持批量操作和查找
+- 使用 `SmallVec` 优化小规模场景的内存使用
+
+### 绘制流程控制
+
+#### DrawStep 状态机
+
+```rust
+
+pub trait DrawStepApi {
+    fn done() -> DrawStep {
+        Result::Ok(())
+    }
+    fn make_step_here(arg: WidgetRef) -> DrawStep {
+        Result::Err(arg)
+    }
+    fn make_step() -> DrawStep {
+        Result::Err(WidgetRef::empty())
+    }
+    fn is_done(&self) -> bool;
+    fn is_step(&self) -> bool;
+    fn step(self) -> Option<WidgetRef>;
+}
+
+impl DrawStepApi for DrawStep {
+    fn is_done(&self) -> bool {
+        match *self {
+            Result::Ok(_) => true,
+            Result::Err(_) => false,
+        }
+    }
+    fn is_step(&self) -> bool {
+        match *self {
+            Result::Ok(_) => false,
+            Result::Err(_) => true,
+        }
+    }
+
+    fn step(self) -> Option<WidgetRef> {
+        match self {
+            Result::Ok(_) => None,
+            Result::Err(nd) => Some(nd),
+        }
+    }
+}
+
+pub type DrawStep = Result<(), WidgetRef>;
+```
+基于 `Result` 设计状态机的优势：
+
+##### 1. **支持增量渲染**
+
+- `Result::Err(WidgetRef)` 表示渲染未完成,需要继续下一步
+- `Result::Ok(())` 表示渲染完成
+- 这种设计让渲染过程可以被分成多个步骤执行
+
+##### 2. **状态保持**
+
+- 使用 `Result` 可以在每个渲染步骤之间保持状态
+- `Err(WidgetRef)` 携带了下一步需要渲染的组件信息
+
+##### 3. **控制流管理**
+
+- 通过 `?` 运算符优雅地处理渲染流程
+- 容易实现渲染的暂停、继续和终止
+- 易于优化，支持复杂交互
+
+##### 4. **内存效率**
+
+- `Result` 是零成本抽象
+- 状态机切换不会产生额外开销
+
+#### 绘制流程
+
+```Mermaid
+
+graph TD
+    A[Widget::draw_walk] --> B{Check DrawState}
+    B -->|First Draw| C[Begin Layout]
+    B -->|Continuing| D[Resume Drawing]
+    C --> E[Setup Turtle]
+    E --> F[Draw Content]
+    F --> G{More to Draw?}
+    G -->|Yes| H[Save State]
+    G -->|No| I[End Drawing]
+    H --> J[Return DrawStep]
+    I --> K[Return Done]
+    D --> F
+
+```
+
+下面通过一个简单 Button widget 来说明绘制流程：
+
+```rust
+pub struct Button {
+    // 绘制状态机
+    #[rust] draw_state: DrawStateWrap<DrawState>,
+    // 布局信息
+    #[layout] layout: Layout,
+    // 定位信息
+    #[walk] walk: Walk,
+    // 背景绘制
+    #[live] draw_bg: DrawColor,
+    // 文本绘制
+    #[live] draw_text: DrawText,
+}
+
+impl Widget for Button {
+    fn draw_walk(&mut self, cx: &mut Cx2d, scope: &mut Scope, walk: Walk) -> DrawStep {
+        // 1. 初始化绘制状态
+        if self.draw_state.begin(cx, DrawState::DrawBackground) {
+            // 开始布局计算
+            self.draw_bg.begin(cx, walk, self.layout);
+            return DrawStep::make_step();
+        }
+
+        // 2. 绘制背景
+        if let Some(DrawState::DrawBackground) = self.draw_state.get() {
+            self.draw_bg.end(cx);
+            // 切换到文本绘制状态
+            self.draw_state.set(DrawState::DrawText);
+            return DrawStep::make_step();
+        }
+
+        // 3. 绘制文本
+        if let Some(DrawState::DrawText) = self.draw_state.get() {
+            let text_walk = Walk::size(Size::Fill, Size::Fit);
+            self.draw_text.draw_walk(cx, scope, text_walk)?;
+            self.draw_state.end();
+        }
+
+        DrawStep::done()
+    }
+}
+
+// 绘制状态枚举
+#[derive(Clone)]
+enum DrawState {
+    DrawBackground,
+    DrawText
+}
+```
+关键点解析:
+
+1. **状态管理**
+
+- DrawStateWrap 管理绘制状态
+- 每个状态对应一个绘制阶段
+- 可以在任何阶段中断和恢复
+
+2. **布局系统**
+
+```rust
+// 设置布局
+self.draw_bg.begin(cx, walk, self.layout);
+
+// Turtle 会自动处理:
+// - 元素位置计算
+// - Margin/Padding 处理
+// - 子元素布局
+```
+3. **渐进式绘制**
+
+```rust
+// 返回继续标记
+return DrawStep::make_step();
+
+// 返回完成标记
+return DrawStep::done();
+```
+
+4. **状态转换**
+
+```rust
+// 切换到下一个状态
+self.draw_state.set(DrawState::DrawText);
+
+// 结束绘制
+self.draw_state.end();
+```
+
+#### 绘制模型
+
+Makepad 采用了一个复杂但高效的延迟绘制系统。
+
+这个系统的核心特点是:绘制命令不会立即执行，而是被收集到绘制列表(DrawList)中，最后统一处理。
+
+```mermaid
+graph TD
+    A[Widget Draw Commands] --> B[DrawList Collection]
+    B --> C[Draw Items]
+    C --> D{Optimization}
+    D --> E[Batch Processing]
+    D --> F[GPU Commands]
+    E --> G[Final Render]
+    F --> G
+```
+DrawList 是 Makepad 绘制系统的核心。让我们看看它的结构：
+
+```rust
+// 在 platform/src/draw_list.rs 中
+pub struct CxDrawList {
+    pub debug_id: LiveId,
+    pub codeflow_parent_id: Option<DrawListId>,
+    pub redraw_id: u64,
+    pub pass_id: Option<PassId>,
+    pub draw_items: CxDrawItems,
+    pub draw_list_uniforms: CxDrawListUniforms,
+    pub rect_areas: Vec<CxRectArea>,
+}
+
+pub struct CxDrawItems {
+    pub(crate) buffer: Vec<CxDrawItem>,
+    used: usize
+}
+
+pub struct CxDrawItem {
+    pub redraw_id: u64,
+    pub kind: CxDrawKind,
+    pub draw_item_id: usize,
+    pub instances: Option<Vec<f32>>,
+    pub os: CxOsDrawCall
+}
+```
+当我们调用 redraw 命令时，实际发生的是：
+
+```rust
+impl DrawQuad {
+    pub fn draw(&mut self, cx: &mut Cx2d) {
+        // 1. 不是立即绘制，而是收集绘制命令
+        if let Some(mi) = &mut self.many_instances {
+            // 批处理模式：将实例数据添加到缓冲区
+            // 这允许多个相似的绘制操作被批量处理，大大减少 GPU 调用次数
+            mi.instances.extend_from_slice(self.draw_vars.as_slice());
+        }
+        else if self.draw_vars.can_instance() {
+            // 单实例模式：创建新的实例
+            let new_area = cx.add_aligned_instance(&self.draw_vars);
+            self.draw_vars.area = cx.update_area_refs(self.draw_vars.area, new_area);
+        }
+    }
+}
+```
+绘制命令合并：
+
+```rust
+impl CxDrawList {
+    pub fn find_appendable_drawcall(
+        &mut self,
+        sh: &CxDrawShader,
+        draw_vars: &DrawVars
+    ) -> Option<usize> {
+        // 尝试找到可以合并的绘制调用
+        if let Some((_,draw_call)) = self.draw_items.iter_mut()
+            .find(|item| item.can_append(sh, draw_vars)) {
+            return Some(draw_call);
+        }
+        None
+    }
+}
+```
+视图优化：
+
+```rust
+enum ViewOptimize {
+    None,
+    DrawList,    // 使用独立绘制列表
+    Texture     // 渲染到纹理缓存
+}
+```
+比如 Makepad 内置的 View Widget ，就用了 ViewOptimize 优化。
+
+**1.DrawList 模式**会为视图创建一个独立的绘制列表，这个列表可以被缓存和重用。
+
+适用场景：
+
+- 内容变化频率适中的界面
+- 需要保持交互响应性的复杂视图
+- 包含大量子元素的容器
+
+**2.Texture 模式**会将整个视图渲染到一个纹理中，然后将这个纹理作为一个整体来使用。
+
+适用场景：
+
+- 静态或很少变化的内容
+- 视觉效果复杂但内容相对稳定的视图
+- 需要特殊视觉效果的界面（如模糊、变换等）
+
+在实践中，可以合理划分视图层级。
+
+```rust
+// 推荐的视图层级结构
+RootView (No Optimization)
+├── StaticBackground (Texture)
+├── ContentArea (DrawList)
+│   ├── StaticWidgets (Texture)
+│   └── DynamicWidgets (DrawList)
+└── OverlayLayer (No Optimization)
+```
+
+#### 绘制区域（Area）管理
+
+在 Makepad 中，区域管理的核心是 `Area` 类型，它用于跟踪和管理 widget 在屏幕上的绘制区域。
+
+每个 Widget 都有一个关联的 Area，这个 Area 不仅用于确定绘制位置，还用于事件处理（Event）和命中（Hit）检测。
+
+```rust
+// 核心区域类型定义
+#[derive(Clone, Copy, Debug)]
+pub enum Area {
+    Empty,
+    Instance(InstanceArea), // 实例区域(用于渲染实例)
+    Rect(RectArea) // 矩形区域(用于基础图形)
+}
+
+pub struct RectArea {
+    pub draw_list_id: DrawListId,
+    pub redraw_id: u64,
+    pub rect_id: usize
+}
+
+pub struct InstanceArea {
+    pub draw_list_id: DrawListId,
+    pub draw_item_id: usize,
+    pub instance_count: usize,
+    pub instance_offset: usize,
+    pub redraw_id: u64
+}
+```
+`Area` 的生命周期如下图：
+
+```mermaid
+graph TD
+    A[Widget创建] --> B[布局计算]
+    B --> C[区域分配]
+    C --> D[区域更新]
+    D --> E[事件处理]
+    E --> F[重绘管理]
+    F --> D
+
+```
+`Area` 管理的核心实现如下：
+
+- 区域创建和分配
+
+```rust
+impl Widget {
+    fn draw_walk(&mut self, cx: &mut Cx2d, scope: &mut Scope, walk: Walk) -> DrawStep {
+        // 从布局计算开始
+        if self.draw_state.begin(cx, DrawState::Begin) {
+            // 开始布局计算
+            cx.begin_turtle(walk, self.layout);
+
+            // 区域分配
+            cx.walk_turtle_with_area(&mut self.area, walk);
+
+            // 区域更新和引用管理
+            self.area = cx.update_area_refs(self.area, new_area);
+        }
+    }
+}
+```
+- 区域更新和追踪
+
+```rust
+impl Cx2d {
+    pub fn update_area_refs(&mut self, old_area: Area, new_area: Area) -> Area {
+        if old_area == Area::Empty {
+            return new_area;
+        }
+
+        // 更新IME区域
+        if self.ime_area == old_area {
+            self.ime_area = new_area;
+        }
+
+        // 更新手指事件区域
+        self.fingers.update_area(old_area, new_area);
+
+        // 更新拖放区域
+        self.drag_drop.update_area(old_area, new_area);
+
+        // 更新键盘焦点区域
+        self.keyboard.update_area(old_area, new_area);
+
+        new_area
+    }
+}
+```
+- 区域裁剪，用于控制了内容的可见范围，维护视觉边界，处理内容溢出。
+    - 对于实例区域(Instance)：裁剪信息存储在着色器的绘制调用统一变量中
+    - 对于矩形区域(Rect)：裁剪信息直接存储在 RectArea 结构体中：
+
+```rust
+pub struct CxRectArea {
+    pub rect: Rect,                // 矩形本身
+    pub draw_clip: (DVec2, DVec2)  // 存储裁剪范围的最小点和最大点
+}
+```
+
+裁剪实现细节核心的裁剪功能在 `Area` 源码中的 `clipped_rect()` 方法中实现。
+
+对于实例区域(Instance)：
+
+1. 裁剪边界以四个值(minX, minY, maxX, maxY)的形式存储在着色器统一变量中
+2. 在绘制时，着色器会应用这些裁剪边界来限制像素的绘制范围
+3. 裁剪在顶点着色器阶段通过限制顶点位置来实现
+
+对于矩形区域(Rect)：
+
+1. 裁剪边界直接存储在 `RectArea` 结构中
+2. 裁剪通过矩形与其裁剪边界的求交来实现
+3. 这会生成一个表示可见部分的新矩形
+
+#### 事件处理
+
+Makepad的事件系统分为几个层级:
+
+```rust
+// 顶层事件枚举
+pub enum Event {
+    FingerDown(FingerDownEvent),
+    FingerUp(FingerUpEvent),
+    FingerMove(FingerMoveEvent),
+    KeyDown(KeyEvent),
+    KeyUp(KeyEvent),
+    // ...
+}
+
+// 事件命中检测结果
+pub enum Hit {
+    KeyFocus(KeyFocusEvent),
+    FingerDown(FingerDownEvent),
+    Nothing
+}
+```
+事件的分发遵循以下流程:
+
+```rust
+impl Widget for MyWidget {
+    fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
+        // 检查事件是否命中当前widget的area
+        match event.hits(cx, self.area()) {
+            Hit::FingerDown(e) => {
+                // 处理点击事件
+                cx.widget_action(uid, &scope.path, MyAction::Clicked);
+            }
+            Hit::KeyDown(e) => {
+                // 处理键盘事件
+            }
+            _ => ()
+        }
+    }
+}
+```
+下面是一个简单的 `Button` 事件处理的示例：
+
+```rust
+#[derive(Live)]
+pub struct Button {
+    #[rust] pub area: Area,
+    #[live] pub text: String,
+    #[animator] pub animator: Animator,
+}
+
+impl Widget for Button {
+    fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
+        let uid = self.widget_uid();
+
+        // 处理动画事件
+        if self.animator_handle_event(cx, event).must_redraw() {
+            self.redraw(cx);
+        }
+
+        match event.hits(cx, self.area()) {
+            Hit::FingerDown(_) => {
+                // 触发点击动画
+                self.animator_play(cx, id!(down.on));
+                // 发送点击事件action
+                cx.widget_action(uid, &scope.path, ButtonAction::Clicked);
+            }
+            Hit::FingerUp(_) => {
+                self.animator_play(cx, id!(down.off));
+            }
+            _ => ()
+        }
+    }
+}
+```
+## Widget 渲染机制
+
+### 事件系统
+
+事件系统分层架构:
+
+- 底层事件系统(Event) - 处理系统和UI基础事件
+- 中层动作系统(Action) - 处理组件间通信和状态更新
+- 上层消息系统(Signal/Channel) - 处理跨线程通信
+
+#### Makepad 的线程模型
+
+![Makepad 的线程模型](https://trusted-heron-8b2.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fee83deb1-85d6-437c-894c-b4353fce458b%2Fa3942c5c-f498-47e6-bcac-6a82b18d3537%2Fmakepad-thread-model.png?table=block&id=15269449-ef79-8015-8867-fbaf2f6197d5&spaceId=ee83deb1-85d6-437c-894c-b4353fce458b&width=1200&userId=&cache=v2)
+
+Makepad 分为主 `UI 线程`和其他多个 `Worker 线程`。
+
+1. **单一UI渲染线程**：
+
+- UI 渲染和事件处理在主线程进行
+- 主线程运行事件循环(event_loop)
+- 所有 UI 更新必须发生在主线程
+
+2. **多个 Worker 线程**：
+
+- 通过线程池管理后台任务
+- 提供多种线程池实现以满足不同需求
+- 工作线程不直接操作 UI
+
+3. **线程间通信**：
+
+- Action 系统用于线程间消息传递
+- Signal 机制用于线程同步
+- Channel 用于数据传输
+
+主线程(UI线程)模型：
+
+```rust
+// app_main 宏中定义了主线程入口
+pub fn app_main() {
+    // 创建 Cx
+    let mut cx = Rc::new(RefCell::new(Cx::new(Box::new(move |cx, event| {
+        // 主要事件处理循环
+        if let Event::Startup = event {
+            *app.borrow_mut() = Some($app::new_main(cx));
+        }
+        if let Event::LiveEdit = event {
+            app.borrow_mut().update_main(cx);
+        }
+        app.borrow_mut().as_mut().unwrap().handle_event(cx, event);
+    }))));
+
+    // 注册组件、初始化等
+    $app::register_main_module(&mut *cx.borrow_mut());
+    live_design(&mut *cx.borrow_mut());
+    cx.borrow_mut().init_cx_os();
+
+    // 启动事件循环
+    Cx::event_loop(cx);
+}
+```
+线程间通信机制：
+
+```rust
+// 全局 Action 发送通道
+static ACTION_SENDER_GLOBAL: Mutex<Option<Sender<ActionSendSync>>> = Mutex::new(None);
+
+// UI 信号机制
+pub struct SignalToUI(Arc<AtomicBool>);
+
+// 线程通信 Receiver/Sender
+pub struct ToUIReceiver<T> {
+    sender: Sender<T>,
+    pub receiver: Receiver<T>,
+}
+
+pub struct ToUISender<T> {
+    sender: Sender<T>,
+}
+```
+包含了线程池：
+
+```rust
+// 标准线程池，用于简单的任务执行
+pub struct RevThreadPool {
+    tasks: Arc<Mutex<Vec<Box<dyn FnOnce() + Send + 'static>>>>,
+}
+
+// 带标签的线程池，用于需要分类和取消的任务
+pub struct TagThreadPool<T: Clone + Send + 'static + PartialEq> {
+    tasks: Arc<Mutex<Vec<(T, Box<dyn FnOnce(T) + Send + 'static>)>>>,
+}
+
+// 消息线程池，用于线程间持续通信
+pub struct MessageThreadPool<T: Clone + Send + 'static> {
+    sender: Sender<Box<dyn FnOnce(Option<T>) + Send + 'static>>,
+    msg_senders: Vec<Sender<T>>,
+}
+```
+主要通信流:
+
+```rust
+// 1. 工作线程发送 Action 到主线程
+Cx::post_action(action); // 通过全局 ACTION_SENDER 发送
+
+// 2. 主线程处理接收到的 Action
+impl Cx {
+    pub fn handle_action_receiver(&mut self) {
+        while let Ok(action) = self.action_receiver.try_recv() {
+            self.new_actions.push(action);
+        }
+        self.handle_actions();
+    }
+}
+
+// 3. UI 状态更新通知
+SignalToUI::set_ui_signal(); // 通知 UI 需要更新
+```
+
+#### 事件系统概览
+
+Makepad 提供 Event 机制，用于自底向上传播(由系统/框架分发给组件)来自系统底层的事件(如鼠标、键盘、触摸等)。
+
+Event 是同步处理的全局性事件。
+
+```rust
+pub enum Event {
+    // 应用生命周期事件
+    Startup,
+    Shutdown,
+    Foreground,
+    Background,
+    Resume,
+    Pause,
+
+    // UI交互事件
+    Draw(DrawEvent),
+    MouseDown(MouseDownEvent),
+    MouseMove(MouseMoveEvent),
+    KeyDown(KeyEvent),
+    TextInput(TextInputEvent),
+
+    // 自定义事件
+    Signal,  // 用于线程间通讯
+    Actions(ActionsBuf), // 自定义动作的容器
+    Timer(TimerEvent),  // 定时器事件
+}
+```
+此外，Makepad 也提供 `Action` 机制，用于自顶向下传播(由组件发送给父组件/监听者)的内部业务动作。
+
+这些 `Action` 是可以同步也可以异步。
+
+**总结 Event 和 Action 区别**：
+
+- Event 是系统级别的输入事件，自底而上传播底层事件。
+- Action 是组件级别的业务动作，自顶而下传播业务动作。
+
+```rust
+// Action 特征定义
+pub trait ActionTrait: 'static {
+    fn debug_fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result;
+    fn ref_cast_type_id(&self) -> TypeId;
+}
+
+// 具体 Action 示例，定义 Button 的业务代码
+#[derive(Clone, Debug)]
+pub enum ButtonAction {
+    Clicked,
+    Pressed,
+    Released
+}
+```
+Makepad 通过 `widget_action` 提供了一个统一的 Action 发送和处理机制，并且 Action 可以携带数据和状态。
+
+```rust
+// Action的包装结构
+pub struct WidgetAction {
+    pub action: Box<dyn WidgetActionTrait>,
+    pub data: Option<Arc<dyn ActionTrait>>, // 关联数据
+    pub widgets: SmallVec<[WidgetRef;4]>, // 发送action的组件引用
+    pub widget_uid: WidgetUid,  // 组件唯一ID
+    pub path: HeapLiveIdPath,   // 组件路径
+    pub group: Option<WidgetActionGroup> // 分组信息
+}
+
+// Action分组信息
+pub struct WidgetActionGroup {
+    pub group_uid: WidgetUid,
+    pub item_uid: WidgetUid,
+}
+```
+组件通过 `widget_action` 发送 Action：
+
+```rust
+impl WidgetActionCxExt for Cx {
+    // 发送一个简单的action
+    fn widget_action(
+        &mut self,
+        widget_uid: WidgetUid,  // 组件ID
+        path: &HeapLiveIdPath,  // 组件路径
+        t: impl WidgetActionTrait // Action内容
+    ) {
+        self.action(WidgetAction {
+            widget_uid,
+            data: None,
+            path: path.clone(),
+            widgets: Default::default(),
+            action: Box::new(t),
+            group: None,
+        })
+    }
+
+    // 发送带数据的action
+    fn widget_action_with_data(
+        &mut self,
+        action_data: &WidgetActionData,
+        widget_uid: WidgetUid,
+        path: &HeapLiveIdPath,
+        t: impl WidgetActionTrait,
+    ) {
+        self.action(WidgetAction {
+            widget_uid,
+            data: action_data.clone_data(),
+            path: path.clone(),
+            widgets: Default::default(),
+            action: Box::new(t),
+            group: None,
+        })
+    }
+}
+
+#[derive(Default)]
+pub struct WidgetActionData{
+    data: Option<Arc<dyn ActionTrait>>
+}
+```
+Action 被收集到 `context` 的 `action buffer` :
+
+```rust
+impl Cx {
+    pub fn action(&mut self, action: impl ActionTrait) {
+        self.new_actions.push(Box::new(action));
+    }
+}
+```
+接收方获取所有 Actions:
+
+```rust
+// 捕获某个事件处理过程中产生的所有actions
+let actions = cx.capture_actions(|cx| {
+    self.button.handle_event(cx, event, scope);
+});
+```
+再查找特定的 Action :
+
+```rust
+impl WidgetActionsApi for Actions {
+    // 通过组件路径查找action
+    fn widget_action(&self, path: &[LiveId]) -> Option<&WidgetAction> {
+        for action in self {
+            if let Some(action) = action.downcast_ref::<WidgetAction>() {
+                let mut ap = action.path.data.iter().rev();
+                if path.iter().rev().all(|p| ap.find(|&ap| p == ap).is_some()) {
+                    return Some(action)
+                }
+            }
+        }
+        None
+    }
+
+    // 通过组件ID查找action
+    fn find_widget_action(&self, widget_uid: WidgetUid) -> Option<&WidgetAction> {
+        for action in self {
+            if let Some(action) = action.downcast_ref::<WidgetAction>() {
+                if action.widget_uid == widget_uid {
+                    return Some(action);
+                }
+            }
+        }
+        None
+    }
+}
+```
+Action 的类型转换与处理:
+
+```rust
+// 示例: 处理按钮点击事件
+impl ButtonRef {
+    pub fn clicked(&self, actions: &Actions) -> bool {
+        if let ButtonAction::Clicked = actions.find_widget_action(self.widget_uid()).cast() {
+            return true
+        }
+        false
+    }
+}
+
+// 使用示例
+let actions = cx.capture_actions(|cx| {
+    self.button.handle_event(cx, event, scope);
+});
+
+if self.button.clicked(&actions) {
+    // 处理点击事件
+}
+```
+这套机制让 Makepad 的组件能够灵活地进行状态传递和事件通信,同时保持了良好的解耦性和可维护性。
+
+#### 事件处理流程
+
+因为 `Widget trait` 中的 `handle_event` 主要关注两个方面:
+
+```rust
+impl Widget for MyWidget {
+    fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
+        // 1. 处理区域内的命中测试事件(点击、拖拽等)
+        match event.hits(cx, self.area()) {
+            Hit::FingerDown(e) => { ... }
+            Hit::KeyDown(e) => { ... }
+        }
+
+        // 2. 处理动画相关事件
+        if self.animator_handle_event(cx, event).must_redraw() {
+            self.draw_key.area().redraw(cx)
+        }
+    }
+}
+```
+
+但实际有很多事件是与 Area 无关的，比如:
+
+- 生命周期事件(启动、关闭)
+- 全局事件(前台、后台切换)
+- Action 处理
+- 绘制事件
+- 动画帧更新
+
+如果这些事件都在每个 Widget 中处理的话， match event 分支就会很冗余。
+
+```rust
+// 不用 MatchEvent
+impl Widget for MyWidget {
+    fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
+        match event {
+            Event::Startup => { ... }
+            Event::Draw(e) => { ... }
+            Event::NextFrame(e) => { ... }
+            Event::Actions(e) => { ... }
+            // 还要处理命中测试
+            _ => match event.hits(cx, self.area()) {
+                Hit::FingerDown(e) => { ... }
+            }
+        }
+    }
+}
+```
+所以，Makepad 提供 `MatchEvent` trait，来提供一系列默认实现的方法，让代码更清晰:
+
+```rust
+#[derive(Default)]
+struct MyComplexWidget {
+    area: Area,
+    value: f64,
+    animator: Animator
+}
+
+// Widget trait 处理核心交互逻辑
+impl Widget for MyComplexWidget {
+    fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
+        let uid = self.widget_uid();
+
+        // 1. 动画处理
+        if self.animator_handle_event(cx, event).must_redraw() {
+            self.redraw(cx);
+        }
+
+        // 2. 交互事件处理
+        match event.hits(cx, self.area) {
+            Hit::FingerDown(_) => {
+                self.animator_play(cx, id!(down.on));
+                cx.widget_action(uid, &scope.path, MyAction::Clicked);
+            }
+            Hit::KeyDown(ke) => {
+                // 键盘事件处理
+            }
+            _ => ()
+        }
+
+        // 3. 使用 MatchEvent 处理其他事件
+        self.match_event(cx, event);
+    }
+}
+
+// MatchEvent trait 处理业务逻辑
+impl MatchEvent for MyComplexWidget {
+    // 生命周期事件
+    fn handle_startup(&mut self, cx: &mut Cx) {
+        // 初始化配置
+    }
+
+    // 状态更新
+    fn handle_actions(&mut self, cx: &mut Cx, actions: &Actions) {
+        for action in actions {
+            if let MyAction::ValueChanged(new_value) = action.cast() {
+                self.value = new_value;
+                self.redraw(cx);
+            }
+        }
+    }
+
+    // 绘制相关
+    fn handle_draw_2d(&mut self, cx: &mut Cx2d) {
+        // 自定义绘制逻辑
+    }
+
+    // 动画帧
+    fn handle_next_frame(&mut self, cx: &mut Cx, e: &NextFrameEvent) {
+        // 动画更新
+    }
+}
+```
+这样组件就可以专注于实现自己关注的事件处理逻辑，而不用写大量的匹配代码。
+
+Makepad 中事件处理优先级如下：
+
+1. 动画事件 (Animator)
+2. 直接交互事件 (Hit)
+3. 通用系统事件 (MatchEvent)
+4. 业务 (Actions)
+
+#### Signal 机制
+
+```rust
+// UI信号机制
+pub struct SignalToUI(Arc<AtomicBool>);
+
+impl SignalToUI {
+    // 设置UI信号
+    pub fn set_ui_signal() {
+        UI_SIGNAL.store(true, Ordering::SeqCst)
+    }
+
+    // 检查并清除信号
+    pub fn check_and_clear(&self) -> bool {
+        self.0.swap(false, Ordering::SeqCst)
+    }
+}
+
+// UI消息通道
+pub struct ToUIReceiver<T> {
+    sender: Sender<T>,
+    pub receiver: Receiver<T>,
+}
+
+pub struct ToUISender<T> {
+    sender: Sender<T>,
+}
+```
+## 自定义 Widget
+
+让我们创建一个自定义 Button 组件。
+
+完整代码如下，可查看代码中的注释：
+
+```rust
+use makepad_widgets::*;
+
+live_design! {
+    use link::theme::*;
+    use link::shaders::*;
+    use link::widgets::*;
+
+    // 定义一个通用的按钮样式
+    // 继承自 Button
+    pub MyButton = {{MyButton}} <Button> {
+        width: 200, // 按钮宽度
+        height: 50, // 按钮高度
+        margin: {left: 20, right: 20}, // 按钮左右外边距
+
+        text: "My Button", // 按钮文字
+        draw_text: {
+            color: #ffffff // 文字颜色为白色
+        },
+
+        draw_bg: {
+            // 这里最多定义 6 个 instance，否则报错 subtract with overflow
+            instance background_color: #0000ff, // 背景色
+            instance hover_color: #0055ff, // 鼠标悬停时的颜色
+            instance pressed_color: #00008B, // 鼠标按下时的颜色
+
+            instance border_width: 1.0, // 边框宽度
+            instance border_color: #00f3ff, // 边框颜色
+
+            instance glow: 0.0, // 发光效果控制
+            instance hover: 0.0, // 控制鼠标悬停效果
+            instance pressed: 0.0, // 控制鼠标按下效果
+
+            fn pixel(self) -> vec4 {
+                let sdf = Sdf2d::viewport(self.pos * self.rect_size);
+                // sdf.box(0.0, 0.0, self.rect_size.x, self.rect_size.y, 8.0);
+
+                // 计算缩放和位移
+                let scale = 1.0 - self.pressed * 0.04; // 按下时稍微缩小
+                let size = self.rect_size * scale;
+                let offset = (self.rect_size - size) * 0.5; // 居中
+
+                // 绘制外层发光
+                sdf.box(
+                    offset.x ,  // 向外扩展4个像素
+                    offset.y ,
+                    size.x ,    // 两边各扩展4个像素
+                    size.y ,
+                    9.0            // 稍大的圆角
+                );
+
+                // 发光效果 - 使用半透明的边框颜色
+                let glow_alpha = self.glow * 0.5; // 控制发光强度
+                sdf.fill_keep(vec4(self.border_color.xyz, glow_alpha));
+
+
+                // 简化绘制，只保留主体
+                sdf.box(
+                    offset.x,
+                    offset.y,
+                    size.x,
+                    size.y,
+                    8.0
+                );
+
+                // 未按下时显示阴影,按下时减弱阴影
+                let shadow_alpha = (1.0 - self.pressed) * 0.2;
+                sdf.fill_keep(vec4(0.,0.,0.,shadow_alpha));
+
+                // 基础颜色
+                let base_color = self.background_color;
+
+                // hover效果通过降低透明度来实现,不直接修改颜色
+                let hover_alpha = self.hover * 0.2;
+                let color_with_hover = mix(
+                    base_color,
+                    vec4(1.0, 1.0, 1.0, 1.0),
+                    hover_alpha
+                );
+
+                // pressed效果
+                let final_color = mix(
+                    color_with_hover,
+                    self.pressed_color,
+                    self.pressed
+                );
+
+
+                // 先填充主体颜色
+                sdf.fill_keep(final_color);
+
+                // 边框发光效果
+                let border_glow = max(self.hover * 0.5, self.glow);
+                let border_color = mix(
+                    self.border_color,
+                    vec4(1.0, 1.0, 1.0, 0.8),
+                    border_glow
+                );
+                sdf.stroke(border_color, self.border_width);
+
+                return sdf.result
+            }
+        }
+
+    }
+}
+
+
+// 定义组件结构体
+#[derive(Live,Widget)]
+pub struct MyButton {
+    // 继承 Button 的所有功能
+    #[deref]
+    button: Button,
+    #[rust]
+    initialized: bool, // 标记是否已初始化
+}
+
+impl LiveHook for MyButton {
+    fn after_new_from_doc(&mut self, cx: &mut Cx) {
+        log!("MyButton: after_new_from_doc");
+        self.initialized = true; // 在创建后就将其标记为已初始化
+        self.button.after_new_from_doc(cx);
+        log!("button text is empty? {:?}", self.button.text.as_ref())
+    }
+
+    fn before_apply(&mut self, cx: &mut Cx, apply: &mut Apply, index: usize, nodes: &[LiveNode]) {
+        log!("MyButton: before_apply");
+        self.button.before_apply(cx, apply, index, nodes);
+    }
+
+    fn after_apply(&mut self, cx: &mut Cx, apply: &mut Apply, index: usize, nodes: &[LiveNode]) {
+        log!("MyButton: after_apply");
+        self.button.after_apply(cx, apply, index, nodes);
+    }
+}
+
+
+impl Widget for MyButton {
+    fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
+        log!("MyButton handle_event");
+        log!("MyButton not initialized!");
+        self.button.handle_event(cx, event, scope);
+    }
+
+    fn draw_walk(&mut self, cx: &mut Cx2d, scope: &mut Scope, walk: Walk) -> DrawStep {
+        log!("MyButton draw_walk");
+        self.initialized = true;
+        log!("MyButton initialized!");
+        self.button.draw_walk(cx, scope, walk)
+    }
+}
+
+impl MyButtonRef {
+    pub fn clicked(&self, actions: &Actions) -> bool {
+        self.borrow().map(|button| button.button.clicked(actions)).unwrap_or(false)
+    }
+
+    pub fn apply_over(&self, cx: &mut Cx, nodes: LiveNodeSlice) {
+        if let Some(mut inner) = self.borrow_mut() {
+            log!("Applying style to MyButton");
+            // 应用样式到内部按钮
+            inner.button.apply_over(cx, nodes);
+            // 确保重绘
+            inner.button.redraw(cx);
+        } else {
+            log!("Failed to borrow MyButton - this may indicate an initialization problem");
+        }
+    }
+
+    pub fn set_text_and_redraw(&self, cx: &mut Cx, text: &str) {
+        if let Some(mut inner) = self.borrow_mut() {
+            inner.button.set_text_and_redraw(cx, text);
+            inner.button.redraw(cx);
+        }
+    }
+
+    // 添加检查方法
+    pub fn is_some(&self) -> bool {
+        self.borrow().is_some()
+    }
+}
+```
+
+总的来说，这段代码定义了一个高度可定制的按钮组件 `MyButton`，具有丰富的视觉效果如发光、阴影、悬停变色等。它继承了 `Button` 的功能,还添加了初始化检查和一些辅助方法。通过 `live_design!` 宏可以方便地定义按钮的样式。
+
+- live_design! 宏中定义了按钮的样式和属性，包括:
+    - 按钮的尺寸、外边距
+    - 按钮的文字内容和颜色
+    - 按钮的背景色,包括普通状态、悬停状态、按下状态的颜色
+    - 按钮的边框宽度和颜色
+    - 按钮的发光效果、悬停效果、按下效果的控制变量
+    - 按钮的绘制函数 pixel(),详细定义了如何绘制按钮的各个部分,包括发光、阴影、主体颜色、边框等
+- MyButton 结构体定义了按钮组件，它继承了 Button 的所有功能,还添加了一个 `initialized` 字段来标记是否已初始化。
+- 实现了 `LiveHook` trait,定义了组件在不同生命周期的行为:
+    - `after_new_from_doc()`: 创建后将 `initialized` 设为 true,表示已初始化
+    - `before_apply()` 和 `after_apply()`: 在应用属性前后执行一些操作
+- 实现了 Widget trait,定义了组件的事件处理和绘制行为:
+    - `handle_event()`: 处理事件
+    - `draw_walk()`: 绘制组件
+- 为 `MyButtonRef` 实现了一些方法:
+    - `clicked()`: 检查按钮是否被点击
+    - `apply_over()`: 应用样式到按钮
+    - `set_text_and_redraw()`: 设置按钮文字并重绘
+    - `is_some()`: 检查按钮是否存在
+
+特别说明：定义 Widget 主要的 Live 属性标记如下。
+
+- `#[live]` - 表示此属性可在DSL中访问和修改
+- `#[rust]` - 表示此属性只在Rust代码中使用
+- `#[calc]` - 表示这是一个计算属性
+- `#[live(default)]` - 带默认值的属性
+- `#[deref]` - 表示继承另一个组件的属性
