--- a/docs/zh/guide/start/introduction.mdx
+++ b/docs/zh/guide/start/introduction.mdx
@@ -1,10 +1,16 @@
-# Makepad 简介
+# 介绍
 
 > 官网地址：[https://makepad.nl/](https://makepad.nl/)
 >
 > 仓库地址：[https://github.com/makepad/makepad](https://github.com/makepad/makepad)
 >
 > 🚧 目前较活跃的分支的`rik`, 建议您基于`rik`分支进行查看以便获得最新的`makepad`支持
+
+## Makepad Book 介绍
+
+Makepad 之书，面向 Makepad 应用开发者和贡献者，系统地介绍了 Rust 跨平台 Makepad UI 框架的方方面面。
+
+## Makepad 介绍
 
 Makepad 的最终愿景是构建一个 livecoding / design 混合 IDE。就像曾经的 Visual Basic 或 Delphi 那类统一了开发者和设计师的工具一样，只不过 Makepad 是 Rust 实现，并且具有类似于 Figma 这样的设计工具。
 
@@ -32,39 +38,17 @@ Rik Arends 在创造这两个产品的时候，使用基于 HTML/CSS/Javascript 
 
 可以看到视频里：代码、3D树、设计图标都可以做到实时联动效果，视频最后还展示了惊艳的代码折叠动画效果。
 
-## Makepad 简介
 
 为了达到这样的愿景，`Makepad` 就提供两大组成部分：`Makepad Studio` 和 `Makepad Framework` 。
 
-
-### Makepad Studio
-其中，`Makepad Studio` 提供 IDE ，供开发者和设计人员使用，而 `Makepad Framework` 则是 底层UI 框架。
-
-`Makepad Studio` 很重要，因为它决定了开发者的用户体验。
-
-在 UI 重度项目中，最大的成本因素来自于设计师与开发人员的脱节。设计师需要将它们的想法传达给产品经理，产品经理需要与开发人员沟通。开发人员需要向设计师传达限制。持续反馈需要很多东西，并且信息会缺失。
-
-在未来智能时代，设计师需要给 AI 传达更多信息。随着 `Makepad Studio` 创作工具的成熟，设计师会越来越有能力构建复杂而精细的界面。
-
-目前 `Makepad Studio` 已经基本成型。
-
-### Makepad Framework
-
-目前为止，我们说 `Makepad` ，主要是指 `Makepad Framework` ，本书的内容也主要是围绕 `Makepad Framework`。
-
-它正在积极开发中，但已经可以用于构建快速原型和简单（甚至复杂的 UI）应用程序。
-
-> 目前 `makepad` 最活跃的分支是 https://github.com/makepad/makepad/tree/rik
-
-
-### 优势
+## 优势
 
 - `Makepad`可跨平台部署，支持 Web、移动和桌面三端。
 - 使用`着色器（Shader）`进行绘制，使得 `widget` 性能更好
 - 提供`Makepad Studio`来完善工作流程等
 - 为`VR/AR`做准备
 
-### 采用的技术栈优劣
+## 采用的技术栈优劣
 
 - Rust 拥有很多优势，比如高性能、安全、强大的类型系统、可预测的运行时、强大的包管理器、与 C 无缝兼容的 ABI、官方维护的唯一编译器（无需考虑像C/Cpp 那样多个编译器差异）。
 
@@ -79,18 +63,3 @@ Rik Arends 在创造这两个产品的时候，使用基于 HTML/CSS/Javascript 
 - Makepad 也重新实现了`渲染栈（render stack）`。优点是，可以利用 GPU 来加速 UI，容易将设计能力整合到系统中。缺点是，字体渲染需要重新进行，需要自己加载 ttf 文件，并且增加 Web/ 移动设备的包大小。难以与仅提供高级渲染结构（比如 HTML 或 本地平台的 UI 工具包） 用于本地功能和可访问性的系统集成（React Native 的优势所在）。将越来越多的本地 API 桥接到 Rust/Makepad 是一项巨大的任务。
 
 **世界上不存在完美的技术栈，一切都只是权衡**，Makepad 也是在这种不断的权衡之下发展的。
-
-## 应用及示例
-
-你可以从 `Makepad`仓库中的示例[examples](https://github.com/makepad/makepad/tree/rik/examples)及本书的[示例入手](/examples/introduction)单元来学习 `Makepad`。
-
-也可以在线体验：
-
-- [Makepad Studio](https://makepad.dev/)：Makepad Studio 在线体验（基础版本）
-- [Ironfish Synthesizer](https://makepad.nl/makepad-example-ironfish/index.html)：一个音乐合成器
-
-
-两个生产级应用：
-
-- [Robrix](https://github.com/project-robius/robrix)：Robius 基于 Matrix 聊天客户端。
-- [Moly](https://github.com/moxin-org/moly)：纯 Rust 语言的 AI LLM 应用程序。
