--- a/docs/zh/guide/widget/widget-render.mdx
+++ b/docs/zh/guide/widget/widget-render.mdx
@@ -1,142 +1,8 @@
-# Widget 核心概念
+# Widget 渲染机制
 
-Widget 是 Makepad 框架提供的基础控件。
+## 绘制流程控制
 
-**Widget 与 Compont 的主要区别**：
-
-Widget:
-
-- 基础 UI 构建块
-- 直接处理事件和绘制
-- 关注基础 UI 能力
-
-Component:
-
-- Widget 的组合
-- 更高层的抽象
-- 关注业务逻辑
-- 组合已有 Widget
-- 重用性更强
-
-## Widget 核心概念概要
-
-### 与 Widget 的相关的 `trait`
-
-#### `WidgetNode`
-
-```rust
-pub trait WidgetNode: LiveApply {
-    // 一些主要的方法
-    fn uid_to_widget(&self, uid: WidgetUid) -> WidgetRef;
-    fn find_widgets(&self, path: &[LiveId], cached: WidgetCache, results: &mut WidgetSet);
-    fn walk(&mut self, cx: &mut Cx) -> Walk;
-    fn area(&self) -> Area;
-    fn redraw(&mut self, cx: &mut Cx);
-    // 其他默认实现
-}
-```
-这是所有 Widget 的基础 trait :
-
-- 基于 UID 查找 Widget
-- 基于路径查找 Widgets
-- 计算布局位置大小
-- 管理绘制区域
-- 触发重绘
-
-#### `Widget`
-
-```rust
-pub type DrawStep = Result<(), WidgetRef>;
-
-pub trait Widget: WidgetNode {
-    fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope);
-    fn draw_walk(&mut self, cx: &mut Cx2d, scope: &mut Scope, walk: Walk) -> DrawStep;
-
-    // 其他默认实现
-}
-```
-
-该 `trait` 扩展了 `WidgetNode`，增加了:
-
-- 事件处理系统
-- 绘制流程控制
-
-### Widget 引用与管理
-
-#### `WidgetRef`
-
-```rust
-pub struct WidgetRefInner {
-    pub widget: Box<dyn Widget>,
-}
-
-pub struct WidgetRef(Rc<RefCell<Option<WidgetRefInner>>>);
-
-// 关键方法
-impl WidgetRef {
-	// 其他方法
-    // 事件处理
-    pub fn handle_event(&self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
-        // ...
-
-    }
-
-    // 绘制
-    pub fn draw(&mut self, cx: &mut Cx2d, scope: &mut Scope) -> DrawStep {
-        // ...
-    }
-
-    // 获取底层Widget的可变引用
-    pub fn borrow_mut<T: 'static + Widget>(&self) -> Option<RefMut<'_, T>> {
-        // ...
-    }
-
-	// 基础查找方法
-    pub fn find_widgets(&self, path: &[LiveId], cached: WidgetCache, results: &mut WidgetSet) {
-        if let Some(inner) = self.0.borrow().as_ref() {
-            inner.widget.find_widgets(path, cached, results)
-        }
-    }
-}
-```
-- 使用 `Rc<RefCell>` 提供引用计数和内部可变性
-- 支持 `Clone` 和线程安全
-- 通过 `borrow/borrow_mut` 可以安全访问 Widget
-
-#### `WidgetCache`
-
-WidgetCache 是 Makepad UI 框架中重要的性能优化机制，WidgetCache 贯穿整个组件树遍历过程的参数，用于控制各层组件是否启用、清除或绕过缓存。
-
-这对于提升大型 UI 的性能很重要，因为它可以:
-
-- 避免重复的组件树遍历
-- 在需要时强制获取最新状态
-- 在组件状态变化时清除失效的缓存
-
-```rust
-// 典型调用链:
-widget.widget(&path)
-  -> widget.find_widgets(path, WidgetCache::Yes)  // 高层API默认使用缓存
-    -> child_widget.find_widgets(path, cached)    // 继续向下传递缓存参数
-      -> grandchild.find_widgets(path, cached)    // 缓存策略需要一致
-
-```
-
-#### `WidgetSet`
-
-WidgetSet 是 WidgetRef 的集合。
-
-```rust
-pub struct WidgetSet(pub SmallVec<[WidgetRef;2]>);
-```
-
-- 高效管理多个 Widget 引用
-- 支持批量操作和查找
-- 使用 `SmallVec` 优化小规模场景的内存使用
-
-### 绘制流程控制
-
-#### DrawStep 状态机
+### DrawStep 状态机
 
 ```rust
 
@@ -181,29 +47,29 @@ pub type DrawStep = Result<(), WidgetRef>;
 ```
 基于 `Result` 设计状态机的优势：
 
-##### 1. **支持增量渲染**
+#### 1. **支持增量渲染**
 
 - `Result::Err(WidgetRef)` 表示渲染未完成,需要继续下一步
 - `Result::Ok(())` 表示渲染完成
 - 这种设计让渲染过程可以被分成多个步骤执行
 
-##### 2. **状态保持**
+#### 2. **状态保持**
 
 - 使用 `Result` 可以在每个渲染步骤之间保持状态
 - `Err(WidgetRef)` 携带了下一步需要渲染的组件信息
 
-##### 3. **控制流管理**
+#### 3. **控制流管理**
 
 - 通过 `?` 运算符优雅地处理渲染流程
 - 容易实现渲染的暂停、继续和终止
 - 易于优化，支持复杂交互
 
-##### 4. **内存效率**
+#### 4. **内存效率**
 
 - `Result` 是零成本抽象
 - 状态机切换不会产生额外开销
 
-#### 绘制流程
+### 绘制流程
 
 ```Mermaid
 
@@ -312,7 +178,7 @@ self.draw_state.set(DrawState::DrawText);
 self.draw_state.end();
 ```
 
-#### 绘制模型
+### 绘制模型
 
 Makepad 采用了一个复杂但高效的延迟绘制系统。
 
@@ -431,7 +297,7 @@ RootView (No Optimization)
 └── OverlayLayer (No Optimization)
 ```
 
-#### 绘制区域（Area）管理
+### 绘制区域（Area）管理
 
 在 Makepad 中，区域管理的核心是 `Area` 类型，它用于跟踪和管理 widget 在屏幕上的绘制区域。
 
@@ -620,9 +486,8 @@ impl Widget for Button {
     }
 }
 ```
-## Widget 渲染机制
 
-### 事件系统
+## 事件系统
 
 事件系统分层架构:
 
@@ -630,7 +495,7 @@ impl Widget for Button {
 - 中层动作系统(Action) - 处理组件间通信和状态更新
 - 上层消息系统(Signal/Channel) - 处理跨线程通信
 
-#### Makepad 的线程模型
+### Makepad 的线程模型
 
 ![Makepad 的线程模型](https://trusted-heron-8b2.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fee83deb1-85d6-437c-894c-b4353fce458b%2Fa3942c5c-f498-47e6-bcac-6a82b18d3537%2Fmakepad-thread-model.png?table=block&id=15269449-ef79-8015-8867-fbaf2f6197d5&spaceId=ee83deb1-85d6-437c-894c-b4353fce458b&width=1200&userId=&cache=v2)
 
@@ -738,7 +603,7 @@ impl Cx {
 SignalToUI::set_ui_signal(); // 通知 UI 需要更新
 ```
 
-#### 事件系统概览
+### 事件系统概览
 
 Makepad 提供 Event 机制，用于自底向上传播(由系统/框架分发给组件)来自系统底层的事件(如鼠标、键盘、触摸等)。
 
@@ -926,7 +791,7 @@ if self.button.clicked(&actions) {
 ```
 这套机制让 Makepad 的组件能够灵活地进行状态传递和事件通信,同时保持了良好的解耦性和可维护性。
 
-#### 事件处理流程
+### 事件处理流程
 
 因为 `Widget trait` 中的 `handle_event` 主要关注两个方面:
 
@@ -1048,7 +913,7 @@ Makepad 中事件处理优先级如下：
 3. 通用系统事件 (MatchEvent)
 4. 业务 (Actions)
 
-#### Signal 机制
+### Signal 机制
 
 ```rust
 // UI信号机制
@@ -1076,222 +941,3 @@ pub struct ToUISender<T> {
     sender: Sender<T>,
 }
 ```
-## 自定义 Widget
-
-让我们创建一个自定义 Button 组件。
-
-完整代码如下，可查看代码中的注释：
-
-```rust
-use makepad_widgets::*;
-
-live_design! {
-    use link::theme::*;
-    use link::shaders::*;
-    use link::widgets::*;
-
-    // 定义一个通用的按钮样式
-    // 继承自 Button
-    pub MyButton = {{MyButton}} <Button> {
-        width: 200, // 按钮宽度
-        height: 50, // 按钮高度
-        margin: {left: 20, right: 20}, // 按钮左右外边距
-
-        text: "My Button", // 按钮文字
-        draw_text: {
-            color: #ffffff // 文字颜色为白色
-        },
-
-        draw_bg: {
-            // 这里最多定义 6 个 instance，否则报错 subtract with overflow
-            instance background_color: #0000ff, // 背景色
-            instance hover_color: #0055ff, // 鼠标悬停时的颜色
-            instance pressed_color: #00008B, // 鼠标按下时的颜色
-
-            instance border_width: 1.0, // 边框宽度
-            instance border_color: #00f3ff, // 边框颜色
-
-            instance glow: 0.0, // 发光效果控制
-            instance hover: 0.0, // 控制鼠标悬停效果
-            instance pressed: 0.0, // 控制鼠标按下效果
-
-            fn pixel(self) -> vec4 {
-                let sdf = Sdf2d::viewport(self.pos * self.rect_size);
-                // sdf.box(0.0, 0.0, self.rect_size.x, self.rect_size.y, 8.0);
-
-                // 计算缩放和位移
-                let scale = 1.0 - self.pressed * 0.04; // 按下时稍微缩小
-                let size = self.rect_size * scale;
-                let offset = (self.rect_size - size) * 0.5; // 居中
-
-                // 绘制外层发光
-                sdf.box(
-                    offset.x ,  // 向外扩展4个像素
-                    offset.y ,
-                    size.x ,    // 两边各扩展4个像素
-                    size.y ,
-                    9.0            // 稍大的圆角
-                );
-
-                // 发光效果 - 使用半透明的边框颜色
-                let glow_alpha = self.glow * 0.5; // 控制发光强度
-                sdf.fill_keep(vec4(self.border_color.xyz, glow_alpha));
-
-
-                // 简化绘制，只保留主体
-                sdf.box(
-                    offset.x,
-                    offset.y,
-                    size.x,
-                    size.y,
-                    8.0
-                );
-
-                // 未按下时显示阴影,按下时减弱阴影
-                let shadow_alpha = (1.0 - self.pressed) * 0.2;
-                sdf.fill_keep(vec4(0.,0.,0.,shadow_alpha));
-
-                // 基础颜色
-                let base_color = self.background_color;
-
-                // hover效果通过降低透明度来实现,不直接修改颜色
-                let hover_alpha = self.hover * 0.2;
-                let color_with_hover = mix(
-                    base_color,
-                    vec4(1.0, 1.0, 1.0, 1.0),
-                    hover_alpha
-                );
-
-                // pressed效果
-                let final_color = mix(
-                    color_with_hover,
-                    self.pressed_color,
-                    self.pressed
-                );
-
-
-                // 先填充主体颜色
-                sdf.fill_keep(final_color);
-
-                // 边框发光效果
-                let border_glow = max(self.hover * 0.5, self.glow);
-                let border_color = mix(
-                    self.border_color,
-                    vec4(1.0, 1.0, 1.0, 0.8),
-                    border_glow
-                );
-                sdf.stroke(border_color, self.border_width);
-
-                return sdf.result
-            }
-        }
-
-    }
-}
-
-
-// 定义组件结构体
-#[derive(Live,Widget)]
-pub struct MyButton {
-    // 继承 Button 的所有功能
-    #[deref]
-    button: Button,
-    #[rust]
-    initialized: bool, // 标记是否已初始化
-}
-
-impl LiveHook for MyButton {
-    fn after_new_from_doc(&mut self, cx: &mut Cx) {
-        log!("MyButton: after_new_from_doc");
-        self.initialized = true; // 在创建后就将其标记为已初始化
-        self.button.after_new_from_doc(cx);
-        log!("button text is empty? {:?}", self.button.text.as_ref())
-    }
-
-    fn before_apply(&mut self, cx: &mut Cx, apply: &mut Apply, index: usize, nodes: &[LiveNode]) {
-        log!("MyButton: before_apply");
-        self.button.before_apply(cx, apply, index, nodes);
-    }
-
-    fn after_apply(&mut self, cx: &mut Cx, apply: &mut Apply, index: usize, nodes: &[LiveNode]) {
-        log!("MyButton: after_apply");
-        self.button.after_apply(cx, apply, index, nodes);
-    }
-}
-
-
-impl Widget for MyButton {
-    fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
-        log!("MyButton handle_event");
-        log!("MyButton not initialized!");
-        self.button.handle_event(cx, event, scope);
-    }
-
-    fn draw_walk(&mut self, cx: &mut Cx2d, scope: &mut Scope, walk: Walk) -> DrawStep {
-        log!("MyButton draw_walk");
-        self.initialized = true;
-        log!("MyButton initialized!");
-        self.button.draw_walk(cx, scope, walk)
-    }
-}
-
-impl MyButtonRef {
-    pub fn clicked(&self, actions: &Actions) -> bool {
-        self.borrow().map(|button| button.button.clicked(actions)).unwrap_or(false)
-    }
-
-    pub fn apply_over(&self, cx: &mut Cx, nodes: LiveNodeSlice) {
-        if let Some(mut inner) = self.borrow_mut() {
-            log!("Applying style to MyButton");
-            // 应用样式到内部按钮
-            inner.button.apply_over(cx, nodes);
-            // 确保重绘
-            inner.button.redraw(cx);
-        } else {
-            log!("Failed to borrow MyButton - this may indicate an initialization problem");
-        }
-    }
-
-    pub fn set_text_and_redraw(&self, cx: &mut Cx, text: &str) {
-        if let Some(mut inner) = self.borrow_mut() {
-            inner.button.set_text_and_redraw(cx, text);
-            inner.button.redraw(cx);
-        }
-    }
-
-    // 添加检查方法
-    pub fn is_some(&self) -> bool {
-        self.borrow().is_some()
-    }
-}
-```
-
-总的来说，这段代码定义了一个高度可定制的按钮组件 `MyButton`，具有丰富的视觉效果如发光、阴影、悬停变色等。它继承了 `Button` 的功能,还添加了初始化检查和一些辅助方法。通过 `live_design!` 宏可以方便地定义按钮的样式。
-
-- live_design! 宏中定义了按钮的样式和属性，包括:
-    - 按钮的尺寸、外边距
-    - 按钮的文字内容和颜色
-    - 按钮的背景色,包括普通状态、悬停状态、按下状态的颜色
-    - 按钮的边框宽度和颜色
-    - 按钮的发光效果、悬停效果、按下效果的控制变量
-    - 按钮的绘制函数 pixel(),详细定义了如何绘制按钮的各个部分,包括发光、阴影、主体颜色、边框等
-- MyButton 结构体定义了按钮组件，它继承了 Button 的所有功能,还添加了一个 `initialized` 字段来标记是否已初始化。
-- 实现了 `LiveHook` trait,定义了组件在不同生命周期的行为:
-    - `after_new_from_doc()`: 创建后将 `initialized` 设为 true,表示已初始化
-    - `before_apply()` 和 `after_apply()`: 在应用属性前后执行一些操作
-- 实现了 Widget trait,定义了组件的事件处理和绘制行为:
-    - `handle_event()`: 处理事件
-    - `draw_walk()`: 绘制组件
-- 为 `MyButtonRef` 实现了一些方法:
-    - `clicked()`: 检查按钮是否被点击
-    - `apply_over()`: 应用样式到按钮
-    - `set_text_and_redraw()`: 设置按钮文字并重绘
-    - `is_some()`: 检查按钮是否存在
-
-特别说明：定义 Widget 主要的 Live 属性标记如下。
-
-- `#[live]` - 表示此属性可在DSL中访问和修改
-- `#[rust]` - 表示此属性只在Rust代码中使用
-- `#[calc]` - 表示这是一个计算属性
-- `#[live(default)]` - 带默认值的属性
-- `#[deref]` - 表示继承另一个组件的属性
