fix: add mermaid and alignImage deps

--- a/docs/zh/guide/widget/widget-render.mdx
+++ b/docs/zh/guide/widget/widget-render.mdx
@@ -71,7 +71,7 @@ pub type DrawStep = Result<(), WidgetRef>;
 
 ### 绘制流程
 
-```Mermaid
+```mermaid
 
 graph TD
     A[Widget::draw_walk] --> B{Check DrawState}
