feat(en): finish quick start section

--- a/docs/en/contribute/index.mdx
+++ b/docs/en/contribute/index.mdx
@@ -1,3 +1,38 @@
-# Contribution guidelines
+# 贡献指南
 
-Translation in progress...
+我们非常感谢您为Makepad之书做出贡献！每一项的贡献都是对我们的支持，使我们能够不断完善Makepad之书，让更多喜欢Makepad的人受益。
+
+## 提交pull request
+
+1. [Fork](https://github.com/Project-Robius-China/makepad-book/fork) 本仓库到你自己的GitHub个人仓库中。
+2. Clone 你Github仓库中的 `makepad-book` 到本地。
+3. 从 `preview` 分支拉出一个新的分支，命名为 `add/xxx` 或 `update/xxx`，或其他的分支名。
+4. 搭建开发环境，你可以阅读[开发环境搭建](/contribute/dev-setup)部分来了解。
+5. 在本地修改你的分支，完成你的工作。
+6. 提交 Pull Request， 确保所有的 CI 都通过.
+7. 等待 Reviewer 的 Review，如果有需要，你需要根据 Reviewer 的意见进行修改，也可以选择同意相关建议。
+
+:::warning 注意
+
+提交 Pull Request 时，请注意以下几点：
+1. 确保你的 Pull Request 是基于 `preview` 分支, 且为最新。
+3. 保持 PR 足够小，以便每个 PR 只解决一个问题或添加一个功能。
+4. 确保你的 PR 有一个明确的标题和描述，以便 Reviewer 审核。
+5. 请在 PR 中包含适当的描述，并链接相关问题。
+
+:::
+
+## PR 标题格式
+
+PR 标题的格式遵循 [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/) 规范。
+
+示例：
+
+```text
+update(contribute): Add `fooBar` config
+^           ^     ^
+|           |     |__ Subject
+|           |_______ Scope (可选)
+|____________ Type
+```
+
